# Automatic-Conformance-Checking

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  azure.Dockerfile  deployment.yml  entrypoint.sh  local.Dockerfile  nginx.conf  pyproject.toml  requirements.txt  run.sh  user_interface.py
event-logs/: ETM_Configuration.xes  Road_Traffic_Fine_Management_Process.rar
log-skeleton/: index.html.py
pyinsights/: __init__.py  combiner.py  conformance.py  connection.py  export_utils.py
pyinsights/anomaly_detection/: __init__.py  anomaly_detection.py  statistics.py
pyinsights/anonmaly_detection/: __init__.py  anomaly_detection.py
pyinsights/log-skeleton/: log_skeleton.py  pm4py.py
pyinsights/log_skeleton/: .gitignore  __init__.py  equivalence_test.ipynb  log_skeleton.py  main.py
pyinsights/ml/: __init__.py  anomaly_detection.py  statistics.py
pyinsights/organisational_profiling/: __init__.py  compliance.py  resource_profiler.py
pyinsights/temporal_profiling/: __init__.py  conformance.py  connection.py  main.py  style.css  temporal_profiler.py  user_interface.py
temporal profiling/: main.py
tests/: anomaly_detection_test.py  log_skeleton_test.py  resource_test.py  temporal_test.py  test_anomaly_detection.py  test_resource_profiler.py  test_temporal_profiler.py
